# app/Http/Controllers/Project/ProjectController.php
@@ -1,0 +1,290 @@
+<?php
+
+namespace App\Http\Controllers\Project;
+
+use App\Http\Controllers\Controller;
+use App\Models\Project;
+use Illuminate\Http\Request;
+use Illuminate\Support\Facades\Auth;
+use Illuminate\Support\Facades\Storage;
+use Illuminate\Support\Facades\Validator;
+
+class ProjectController extends Controller
+{
+    /**
+     * @OA\Get(
+     *      path="/api/getProjectData",
+     *      operationId="getProjectData",
+     *      tags={"Projets"},
+     *      summary="Get",
+     *      description="Returns list",
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful",
+     * *          @OA\MediaType(
+     *           mediaType="application/json",
+     *      )
+     *       ),
+     *     )
+     */
+    public function getProjectData()
+    {
+        $data = Project::join('users', 'projects.addedBy', '=', 'users.id')
+            ->select('projects.*', 'users.name')->get();
+        $result = [
+            'message' => "success",
+            'success' => true,
+            'status' => 200,
+            'data' => $data
+        ];
+        return response()->json($result);
+    }
+    /**
+     * @OA\Post(
+     * path="/api/createProject",
+     * summary="Create",
+     * description="Creation",
+     * security={{ "bearerAuth":{ }}},
+     * operationId="createProject",
+     * tags={"Projets"},
+     * @OA\RequestBody(
+     *    required=true,
+     *    description="Enregistrer",
+     *    @OA\JsonContent(
+     *       required={"date","title_en","title_fr","description_fr","description_en"},
+     *       @OA\Property(property="title_en", type="string", format="text",example="rdc"),
+     *       @OA\Property(property="title_fr", type="string", format="text",example="rdc"),
+     *       @OA\Property(property="description_fr", type="string", format="text",example="winner kambale"),
+     *       @OA\Property(property="description_en", type="string", format="text",example="rdc"),
+     *       @OA\Property(property="image", type="string", format="text",example="rdc"),
+     *       @OA\Property(property="date", type="string", format="text",example="2025-06-22")
+     *    ),
+     * ),
+     * @OA\Response(
+     *    response=201,
+     *    description="success",
+     *     ),
+     * @OA\Response(
+     *    response=401,
+     *    description="ysteme",
+     *     )
+     * )
+     */
+    public function createProject(Request $request)
+    {
+        $user = Auth::user();
+
+        $validator = Validator::make($request->all(), [
+            'title_en' => 'required',
+            'title_fr' => 'required',
+            'description_fr' => 'required',
+            'description_en' => 'required',
+            'date' => 'required',
+            'image' => 'required|image|mimes:jpeg,png,jpg,gif|max:2048',
+        ]);
+        if ($validator->fails()) {
+            return response()->json([
+                'message' => 'Les données envoyées ne sont pas valides.',
+                'errors' => $validator->errors()
+            ], 422);
+        }
+        $file = $request->file('image');
+        $path = $file->store('images/Project', 'public');
+        Project::create([
+            'title_en' => $request->title_en,
+            'title_fr' => $request->title_fr,
+            'description_fr' => $request->description_fr,
+            'description_en' => $request->description_en,
+            'addedBy' => $user->id,
+            'date' => $request->date,
+            'image' => $path
+        ]);
+        $result = [
+            'message' => "success",
+            'success' => true,
+            'status' => 201
+        ];
+        return response()->json($result);
+    }
+    /**
+     * @OA\Post(
+     * path="/api/updateProject/{id}",
+     * summary="Update",
+     * description="Modification",
+     * security={{ "bearerAuth":{ }}},
+     * operationId="updateProject",
+     * tags={"Projets"},
+     * @OA\Parameter(
+     *    name="id",
+     *    in="path",
+     *    required=true,
+     *    @OA\Schema(type="integer")
+     * ),
+     * @OA\RequestBody(
+     *    required=false,
+     *    description="Modifier",
+     *    @OA\JsonContent(
+     *       required={"date","title_en","title_fr","description_fr","description_en"},
+     *       @OA\Property(property="title_en", type="string", format="text",example="rdc"),
+     *       @OA\Property(property="title_fr", type="string", format="text",example="rdc"),
+     *       @OA\Property(property="description_fr", type="string", format="text",example="winner kambale"),
+     *       @OA\Property(property="description_en", type="string", format="text",example="rdc"),
+     *       @OA\Property(property="image", type="string", format="text",example="rdc"),
+     *       @OA\Property(property="date", type="string", format="text",example="2025-06-22")
+     *    ),
+     * ),
+     * @OA\Response(
+     *    response=200,
+     *    description="success",
+     * ),
+     * @OA\Response(
+     *    response=404,
+     *    description="Projets not found",
+     * ),
+     * @OA\Response(
+     *    response=422,
+     *    description="Validation error",
+     * )
+     * )
+     */
+    public function updateProject(Request $request, $id)
+    {
+        $service = Project::find($id);
+
+        if (!$service) {
+            return response()->json(['message' => 'service not found'], 404);
+        }
+
+        $user = Auth::user();
+
+        $validator = Validator::make($request->all(), [
+            'title_en' => 'required',
+            'title_fr' => 'required',
+            'description_fr' => 'required',
+            'description_en' => 'required',
+            'date' => 'required',
+            'image' => 'required|image|mimes:jpeg,png,jpg,gif|max:2048',
+        ]);
+
+        if ($validator->fails()) {
+            return response()->json([
+                'message' => 'Les données envoyées ne sont pas valides.',
+                'errors' => $validator->errors()
+            ], 422);
+        }
+
+        if ($request->hasFile('image')) {
+            Storage::disk('public')->delete($service->image);
+
+            $file = $request->file('image');
+            $path = $file->store('images/Project', 'public');
+        } else {
+            $path = $service->image;
+        }
+
+        $service->update([
+            'title_en' => $request->title_en,
+            'title_fr' => $request->title_fr,
+            'description_fr' => $request->description_fr,
+            'description_en' => $request->description_en,
+            'date' => $request->date,
+            'addedBy' => $user->id,
+            'image' => $path
+        ]);
+
+        $result = [
+            'message' => "success",
+            'success' => true,
+            'status' => 200
+        ];
+        return response()->json($result);
+    }
+    /**
+     * @OA\Delete(
+     * path="/api/deleteProject/{id}",
+     * summary="Delete",
+     * description="Suppression",
+     * security={{ "bearerAuth":{ }}},
+     * operationId="deleteProject",
+     * tags={"Projets"},
+     * @OA\Parameter(
+     *    name="id",
+     *    in="path",
+     *    required=true,
+     *    @OA\Schema(type="integer")
+     * ),
+     * @OA\Response(
+     *    response=200,
+     *    description="Slide deleted successfully",
+     * ),
+     * @OA\Response(
+     *    response=404,
+     *    description="Slide not found",
+     * ),
+     * @OA\Response(
+     *    response=401,
+     *    description="Unauthorized",
+     * )
+     * )
+     */
+    public function deleteProject($id)
+    {
+        $project = Project::find($id);
+
+        if (!$project) {
+            return response()->json(['message' => 'project not found'], 404);
+        }
+        Storage::disk('public')->delete($project->image);
+
+        $project->delete();
+
+        return response()->json([
+            'message' => "Slide deleted successfully",
+            'success' => true,
+            'status' => 200
+        ]);
+    }
+    /**
+     * @OA\Get(
+     *     path="/api/getSingleProject/{id}",
+     *     summary="Afficher",
+     *     description="Afficher ",
+     *     security={{"bearerAuth":{}}},
+     *     operationId="getSingleProject",
+     *     tags={"Projets"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         description="ID de l'approv",
+     *         @OA\Schema(
+     *             type="integer"
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="succès",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="status", type="string", example="success"),
+     *             @OA\Property(property="message", type="string", example="succès")
+     *         ),
+     * @OA\Response(
+     *    response=401,
+     *    description="le systeme",
+     *     )
+     *     ),
+     *     )
+     * )
+     */
+    public function getSingleProject($id)
+    {
+        $data = Project::find($id);
+        $result = [
+            'message' => "success",
+            'success' => true,
+            'status' => 200,
+            'data' => $data
+        ];
+        return response()->json($result);
+    }
+}
